--- a/src/main/resources/static/views/instruction-start-position.html
+++ b/src/main/resources/static/views/instruction-start-position.html
@@ -23,8 +23,57 @@
     </div>
 </div>
 
+<div class="row justify-content-center">
+    <div class="card flex-fill ml-3 mr-3">
+        <div class="card-header text-center">
+            step 1
+        </div>
+        <div class="card-body text-center">
+            <picture>
+                <img src="../pictures/instruction_start-position_step1.jpg" class="img-fluid">
+            </picture>
+        </div>
+    </div>
+</div>
 
+<div class="row justify-content-center">
+    <div class="card flex-fill ml-3 mr-3">
+        <div class="card-header text-center">
+            step 2
+        </div>
+        <div class="card-body text-center">
+            <picture>
+                <img src="../pictures/instruction_start-position_step2.jpg" class="img-fluid">
+            </picture>
+        </div>
+    </div>
+</div>
 
+<div class="row justify-content-center">
+    <div class="card flex-fill ml-3 mr-3">
+        <div class="card-header text-center">
+            step 3
+        </div>
+        <div class="card-body text-center">
+            <picture>
+                <img src="../pictures/instruction_start-position_step3.jpg" class="img-fluid">
+            </picture>
+        </div>
+    </div>
+</div>
+
+<div class="row justify-content-center">
+    <div class="card flex-fill ml-3 mr-3">
+        <div class="card-header text-center">
+            step 4
+        </div>
+        <div class="card-body text-center">
+            <picture>
+                <img src="../pictures/instruction_start-position_step4.jpg" class="img-fluid">
+            </picture>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-lg ml-5 mr-5">
         <a href="/"> back to main page</a>
