fix initial ste in instructions

--- a/src/main/resources/static/views/instruction-start-position.html
+++ b/src/main/resources/static/views/instruction-start-position.html
@@ -18,7 +18,7 @@
             Start position on chromosome may be taken using Ensembl.
         </div>
         <div class="card-body text-center">
-            Go to the Ensembl website: <a href="http://www.ensembl.org/Multi/Tools/Blast?db=core" target="_blank"> click here</a>
+            Go to the Ensembl website <a href="http://www.ensembl.org/Multi/Tools/Blast?db=core" target="_blank"> (click here) </a> and follow instruction below.
         </div>
     </div>
 </div>
